text-page, like, comment, thumbl slider

--- a/src/blocks/modules/breadcrumbs/breadcrumbs.scss
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs.scss
@@ -15,7 +15,7 @@
         position: relative;
         color: $text-silver;
         &:before {
-            content: "";
+            content: '';
             position: absolute;
             top: 0;
             right: -33px;
