--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -13,8 +13,11 @@
             <div class="col-12">
                 <a href="/" class="card card--main">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
-                        <img src="img1360x695_Toyota_2020.jpg" type="image/jpg" title="Лучшие в металлургии"
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/1360x695_Toyota_2020.jpg" type="image/jpg" title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="card-body">
@@ -36,7 +39,10 @@
             <div class="col-md-4">
                 <a href="/" class="card">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/ot.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/ot.jpg" type="image/jpg"
                              title="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами"
                              alt="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами">
@@ -59,7 +65,10 @@
             <div class="col-md-4">
                 <a href="/" class="card">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/AA5J6740.jpg" type="image/jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
@@ -86,7 +95,10 @@
             <div class="col-md-4">
                 <a href="/" class="card card--image">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/IMG_9962_4k.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/IMG_9962_4k.jpg" type="image/jpg"
                              title="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%"
                              alt="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%">
@@ -116,7 +128,10 @@
             <div class="col-md-6">
                 <a href="/" class="card card--image card--big">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/PPU.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/PPU.jpg" type="image/jpg"
                              title="АТЗ пополнил товарную линейку трубами с внутренним антикоррозионным покрытием и тепловой изоляцией"
                              alt="АТЗ пополнил товарную линейку трубами с внутренним антикоррозионным покрытием и тепловой изоляцией">
@@ -153,7 +168,10 @@
             <div class="col-md-6">
                 <a href="/" class="card card--big">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/IMG_9962_4k.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/IMG_9962_4k.jpg" type="image/jpg"
                              title="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%"
                              alt="Производственный травматизм в 2019 году на предприятиях ОМК снизился на 43%">
@@ -185,7 +203,10 @@
             <div class="col-md-4">
                 <a href="/" class="card">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/ot.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/ot.jpg" type="image/jpg"
                              title="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами"
                              alt="Альметьевский трубный завод пополнил товарную линейку оцинкованными трубами">
@@ -205,7 +226,10 @@
             <div class="col-md-4">
                 <a href="/" class="card">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/AA5J6740.jpg" type="image/jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
@@ -224,7 +248,10 @@
             <div class="col-md-4">
                 <a href="/" class="card">
                     <picture class="card-img">
+                        <!--[if IE 9]>
+                        <video style="display: none;"><![endif]-->
                         <source srcset="img/P1024449.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
                         <img src="img/P1024449.jpg" type="image/jpg"
                              title="ОМК начала поставки рессор для обновленных автомобилей Ford Transit"
                              alt="ОМК начала поставки рессор для обновленных автомобилей Ford Transit">
@@ -248,7 +275,9 @@
                         <div class="swiper-slide">
                             <a href="/" class="card card--image">
                                 <picture class="card-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
                                     <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
@@ -270,7 +299,10 @@
                         <div class="swiper-slide">
                             <a href="/" class="card card--image">
                                 <picture class="card-img">
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
                                     <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
@@ -292,7 +324,10 @@
                         <div class="swiper-slide">
                             <a href="/" class="card card--image">
                                 <picture class="card-img">
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
                                     <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
@@ -314,7 +349,10 @@
                         <div class="swiper-slide">
                             <a href="/" class="card card--image">
                                 <picture class="card-img">
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J7280.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
                                     <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
                                          alt="Новые технологии на ВМЗ в 2019">
                                 </picture>
@@ -509,7 +547,10 @@
                             <div class="video">
                                 <div class="video__body">
                                     <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
@@ -530,7 +571,10 @@
                             <div class="video">
                                 <div class="video__body">
                                     <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
@@ -551,7 +595,10 @@
                             <div class="video">
                                 <div class="video__body">
                                     <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
@@ -572,7 +619,10 @@
                             <div class="video">
                                 <div class="video__body">
                                     <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
                                     </picture>
                                     <video class="video__player" controls preload="auto">
@@ -668,8 +718,8 @@
         </div>
     </section>
 
-    <section class="tags">
-        <div class="row tags__row">
+    <div class="tags">
+        <div class="row tags__row justify-content-center">
             <a href="#0" class="tags__item">Новость</a>
             <a href="#0" class="tags__item">Мероприятие</a>
             <a href="#0" class="tags__item">Конкурс</a>
@@ -679,12 +729,8 @@
             <a href="#0" class="tags__item">СМИ</a>
             <a href="#0" class="tags__item">Важное сообщение</a>
         </div>
-    </section>
+    </div>
 
 
 </div>
-{% endblock %}
-
-{% block scripts %}
-<script src="js/news.js"></script>
 {% endblock %}
