--- a/src/templates/pages/uikit.html
+++ b/src/templates/pages/uikit.html
@@ -61,6 +61,11 @@
                 <textarea class="fields__input" placeholder="Тип" name="" id="" cols="30" rows="6"></textarea>
                 <span class="fields__placeholder">Тип</span>
             </label>
+
+            <label class="fields-chekbox">
+                <input type="checkbox" class="fields-chekbox__input">
+                <span class="fields-chekbox__placeholder">Аномимно</span>
+            </label>
         </div>
        
     </div>
