--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,5 +1,9 @@
-@import "modules/header/header";
-@import "modules/footer/footer";
-@import "modules/breadcrumbs/breadcrumbs";
-@import "modules/card/card";
-@import "modules/video/video";
+@import 'modules/header/header';
+@import 'modules/footer/footer';
+@import 'modules/breadcrumbs/breadcrumbs';
+@import 'modules/card/card';
+@import 'modules/video/video';
+@import 'modules/gallery/gallery';
+@import 'modules/galleryThumbs/galleryThumbs';
+@import 'modules/comments/comments';
+@import 'modules/likeItem/likeItem';
