--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -41,7 +41,7 @@
             max-height: none;
 
             &::before {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 0;
                 right: 0;
@@ -82,13 +82,13 @@
                     border-color: $silver-dark;
                     color: $dark;
                     &:before {
-                        content: "";
+                        content: '';
                         position: absolute;
                         top: 2px;
                         left: 7px;
                         width: 16px;
                         height: 16px;
-                        background-image: url("../img/icons/icon--badge-gellary.svg");
+                        background-image: url('../img/icons/icon--badge-gellary.svg');
                     }
                 }
 
@@ -98,13 +98,13 @@
                     border-color: $silver-dark;
                     color: $dark;
                     &:before {
-                        content: "";
+                        content: '';
                         position: absolute;
                         top: 2px;
                         left: 7px;
                         width: 16px;
                         height: 16px;
-                        background-image: url("../img/icons/icon--badge-video.svg");
+                        background-image: url('../img/icons/icon--badge-video.svg');
                     }
                 }
             }
@@ -165,7 +165,7 @@
             max-height: none;
 
             &::before {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 0;
                 right: 0;
@@ -175,7 +175,7 @@
             }
 
             &::after {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 50%;
                 right: 0;
@@ -217,13 +217,13 @@
                     border-color: $silver-dark;
                     color: $dark;
                     &:before {
-                        content: "";
+                        content: '';
                         position: absolute;
                         top: 2px;
                         left: 7px;
                         width: 16px;
                         height: 16px;
-                        background-image: url("../img/icons/icon--badge-gellary.svg");
+                        background-image: url('../img/icons/icon--badge-gellary.svg');
                     }
                 }
 
@@ -233,13 +233,13 @@
                     border-color: $silver-dark;
                     color: $dark;
                     &:before {
-                        content: "";
+                        content: '';
                         position: absolute;
                         top: 2px;
                         left: 7px;
                         width: 16px;
                         height: 16px;
-                        background-image: url("../img/icons/icon--badge-video.svg");
+                        background-image: url('../img/icons/icon--badge-video.svg');
                     }
                 }
             }
@@ -315,13 +315,13 @@
                 border-color: $silver-dark;
                 color: $dark;
                 &:before {
-                    content: "";
+                    content: '';
                     position: absolute;
                     top: 2px;
                     left: 7px;
                     width: 16px;
                     height: 16px;
-                    background-image: url("../img/icons/icon--badge-gellary.svg");
+                    background-image: url('../img/icons/icon--badge-gellary.svg');
                 }
             }
 
@@ -331,13 +331,13 @@
                 border-color: $silver-dark;
                 color: $dark;
                 &:before {
-                    content: "";
+                    content: '';
                     position: absolute;
                     top: 2px;
                     left: 7px;
                     width: 16px;
                     height: 16px;
-                    background-image: url("../img/icons/icon--badge-video.svg");
+                    background-image: url('../img/icons/icon--badge-video.svg');
                 }
             }
         }
@@ -403,7 +403,7 @@
     display: flex;
     flex-direction: column;
     max-width: 256px;
-    height: 100%;
+    //height: 100%;
     min-height: 297px;
     border: solid 1px $border-10;
     padding: 17px 18px 20px;
@@ -496,6 +496,7 @@
 
     &__title {
         @include transition();
+        margin-bottom: 0;
         font-size: rem(20);
         font-weight: $font-weight-bold;
         line-height: 1.2;
