--- a/src/styles/base/_inputs.scss
+++ b/src/styles/base/_inputs.scss
@@ -100,13 +100,76 @@
     &--required {
         position: relative;
         &:after {
-            content: "";
+            content: '';
             position: absolute;
             top: 8px;
             right: 8px;
             width: 8px;
             height: 8px;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h8v8H0z'/%3E%3Cpath fill='%231A1A1A' fill-rule='nonzero' d='M7 4.277l-2.724.556 1.889 2.412L5.07 8 3.52 5.369 1.949 8 .855 7.245l1.89-2.412L0 4.277l.447-1.242 2.606.983L2.823 1h1.373l-.229 3.018 2.615-.983z'/%3E%3C/g%3E%3C/svg%3E%0A");
+        }
+    }
+}
+
+.fields-chekbox {
+    position: relative;
+    padding-left: 28px;
+    font-size: 16px;
+    line-height: 1.25;
+
+    &__input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+        visibility: hidden;
+
+        &:checked +  .fields-chekbox__placeholder {
+            
+            &:before {
+                border-color: $text-silver;
+            }
+
+            &:after {
+                opacity: 1;
+            }
+        }
+    }
+
+    &__placeholder {
+        cursor: pointer;
+
+        &:before {
+            @include transition();
+            content: '';
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+            border: solid 1px $silver-dark;
+            background-color: $white;
+
+            &:hover {
+                border-color: $text-silver;
+            }
+        }
+
+        &:after {
+            @include transition();
+            content: '';
+            position: absolute;
+            z-index: 3;
+            top: 0;
+            left: 0;
+            width: 20px;
+            height: 20px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0H20V20H0z'/%3E%3Crect width='18' height='18' x='1' y='1' fill='%23909099' stroke='%23909099' stroke-width='2' rx='3'/%3E%3Cpath stroke='%23FFF' stroke-linecap='square' stroke-width='1.8' d='M5 10L8.5 13.5 15 7'/%3E%3C/g%3E%3C/svg%3E");
+            opacity: 0;
         }
     }
 }
