--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -9,27 +9,27 @@ $coral-dark: #e04a3f;
 $coral: #f65145;
 $green-dark: #1db85b;
 $green: #22d66a;
-$white: #ffffff;
+$white: #fff;
 //border color
-$border-40: #999999;
-$border-20: #cccccc;
+$border-40: #999;
+$border-20: #ccc;
 $border-10: #e6e6e6;
 $colors: ();
-$colors:map_merge((
-    "text-black": $text-black,
-    "ctrl-black": $ctrl-black,
-    "text-silver": $text-silver,
-    "silver-dark": $silver-dark,
-    "silver": $silver,
-    "silver-light": $silver-light,
-    "coral-dark": $coral-dark,
-    "coral": $coral,
-    "green-dark": $green-dark,
-    "green": $green,
-    "border-40": $border-40,
-    "border-20": $border-20,
-    "border-10": $border-10,
-    "white": $white
+$colors: map_merge((
+    'text-black': $text-black,
+    'ctrl-black': $ctrl-black,
+    'text-silver': $text-silver,
+    'silver-dark': $silver-dark,
+    'silver': $silver,
+    'silver-light': $silver-light,
+    'coral-dark': $coral-dark,
+    'coral': $coral,
+    'green-dark': $green-dark,
+    'green': $green,
+    'border-40': $border-40,
+    'border-20': $border-20,
+    'border-10': $border-10,
+    'white': $white
 ), $colors);
 
 $grid-breakpoints: (
@@ -48,9 +48,10 @@ $container-max-widths: (
 
 $grid-columns: 12;
 $grid-gutter-width: 32px;
+
 $grid-row-columns: 6;
 
-$link-color:                              $coral;
-$link-decoration:                         none;
-$link-hover-color:                        $coral-dark;
-$link-hover-decoration:                   underline;
+$link-color: $coral;
+$link-decoration: none;
+$link-hover-color: $coral-dark;
+$link-hover-decoration: underline;
