--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -5,6 +5,10 @@
         margin-right: -32px;
         margin-left: -32px;
         align-items: stretch;
+        @media (max-width: 1280px) {
+            margin-right: -24px;
+            margin-left: -24px;
+        }
 
         & > div {
             display: flex;
@@ -88,6 +92,10 @@
     &__row {
         margin-right: -32px;
         margin-left: -32px;
+        @media (max-width: 1280px) {
+            margin-right: -24px;
+            margin-left: -24px;
+        }
     }
 
     &-slider {
@@ -114,6 +122,10 @@
     &__row {
         margin-right: -32px;
         margin-left: -32px;
+        @media (max-width: 1280px) {
+            margin-right: -24px;
+            margin-left: -24px;
+        }
     }
 }
 
@@ -124,6 +136,10 @@
         margin-right: -32px;
         margin-left: -32px;
         align-items: stretch;
+        @media (max-width: 1280px) {
+            margin-right: -24px;
+            margin-left: -24px;
+        }
     }
 
     &-slider {
@@ -137,10 +153,6 @@
         .swiper-wrapper {
             align-items: stretch;
         }
-
-        .swiper-slide {
-            height: auto;
-        }
     }
 }
 
@@ -148,16 +160,14 @@
     margin-bottom: 80px;
 
     &__row {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        max-width: 736px;
+        width: 100%;
+        max-width: 66.6667%;
         margin: auto;
     }
 
     &__item {
         @include transition();
+        display: inline-block;
         margin: 0 4px 8px;
         padding: 4px 16px;
         font-size: rem(16);
