--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -92,6 +92,7 @@
 {% include 'footer/footer.html' %}
 
 <script src="js/vendor.js"></script>
+<script src="js/main.js"></script>
 {% block scripts %}{% endblock %}
 {% include 'includes/counters.html' %}
 </body>
