--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -1,7 +1,31 @@
 .article {
     padding-top: 32px;
     padding-bottom: 64px;
+    position: relative;
 
+    .progress {
+        display: flex;
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        right: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        overflow: hidden;
+        background-color: transparent;
+
+        &-bar {
+            //@include transition();
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 0;
+            color: #fff;
+            text-align: center;
+            background-color: $coral;
+        }
+    }
 
     &__header {
         align-items: center;
