add ps add obhod

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -5,5 +5,7 @@
 @import 'modules/video/video';
 @import 'modules/gallery/gallery';
 @import 'modules/galleryThumbs/galleryThumbs';
+@import 'modules/galleryPopup/galleryPopup';
 @import 'modules/comments/comments';
 @import 'modules/likeItem/likeItem';
+@import 'modules/practices/practices__widget';
