--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -387,7 +387,7 @@
         <div class="row header-block">
             <h2>Обходы</h2>
             <div class="header-block__btn">
-                <a href=#0" class="btn">Все обходы <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                <a href="obhod.html" class="btn">Все обходы <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
             </div>
         </div>
         <div class="row detours__row">
