--- a/src/templates/pages/uikit.html
+++ b/src/templates/pages/uikit.html
@@ -17,6 +17,8 @@
             <button class="btn btn--dark">normal</button>
             <button class="btn btn--dark btn--lg">Large</button>
             <button class="btn btn--dark btn--sx">Small</button>
+            <button class="btn btn--dark btn--lg">Large</button>
+            <button class="btn btn--dark btn--sx">Small</button>
             <button class="btn btn--dark"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Icon left</button>
             <button class="btn btn--dark">icon right<i class="btn__icon btn__icon--right btn__icon--plus"></i></button>
             <button class="btn btn--dark">normal</button>
