--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -34,6 +34,8 @@
 
     .swiper-button {
         @include transition();
+        top: inherit;
+        transform: none;
         pointer-events: none;
 
         &-prev {
@@ -70,8 +72,7 @@
             @include transition();
             position: relative;
             width: 100%;
-            height: 0;
-            padding-bottom: 66.3%;
+            height: auto;
 
             &::before {
                 @include transition();
@@ -89,11 +90,6 @@
 
         &-img {
             display: block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
             width: 100%;
             overflow: hidden;
             border-radius: 5px;
@@ -103,7 +99,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain;
                 object-position: center;
             }
         }
@@ -114,7 +110,6 @@
         position: absolute;
         z-index: 3;
         right: 8px;
-        bottom: -100%;
         left: 8px;
 
         .swiper-wrapper {
