--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -2,13 +2,16 @@
     @include transition();
     min-width: 104px;
     text-align: center;
-    line-height: 1.5;
     border: none;
     padding: rem(12) rem(16) rem(16);
     border-radius: 5px;
+    font-size: rem(16px);
+    line-height:1.25 ;
+
     &:active {
         transform: scale(.96);
     }
+
     &:disabled {
         cursor: default;
         pointer-events: none;
@@ -33,13 +36,13 @@
             margin-right: rem(-4);
         }
         &--plus {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M.846 0h24v24h-24z'/%3E%3Cpath fill='%23FFF' d='M13.846 4v7h7v2h-7v7h-2v-7h-7v-2h7V4z'/%3E%3C/g%3E%3C/svg%3E");
+            background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'25\' height=\'24\' viewBox=\'0 0 25 24\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M.846 0h24v24h-24z\'/%3E%3Cpath fill=\'%23FFF\' d=\'M13.846 4v7h7v2h-7v7h-2v-7h-7v-2h7V4z\'/%3E%3C/g%3E%3C/svg%3E');
         }
         &--close {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M.346 0h24v24h-24z'/%3E%3Cpath stroke='%23FFF' stroke-width='1.8' d='M18.346 18l-6-6-6-6M18.346 6l-6 6-6 6'/%3E%3C/g%3E%3C/svg%3E");
+            background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'25\' height=\'24\' viewBox=\'0 0 25 24\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M.346 0h24v24h-24z\'/%3E%3Cpath stroke=\'%23FFF\' stroke-width=\'1.8\' d=\'M18.346 18l-6-6-6-6M18.346 6l-6 6-6 6\'/%3E%3C/g%3E%3C/svg%3E');
         }
         &--arrow-right {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M.23 0h24v24h-24z'/%3E%3Cpath stroke='%2300000A' stroke-width='1.8' d='M9.23 6l6 6-6 6'/%3E%3C/g%3E%3C/svg%3E");
+            background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'25\' height=\'24\' viewBox=\'0 0 25 24\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M.23 0h24v24h-24z\'/%3E%3Cpath stroke=\'%2300000A\' stroke-width=\'1.8\' d=\'M9.23 6l6 6-6 6\'/%3E%3C/g%3E%3C/svg%3E');
         }
     }
     &--lg {
