--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -90,16 +90,23 @@
 
         &-img {
             display: block;
+            position: relative;
             width: 100%;
+            padding-bottom: 66.3%;
             overflow: hidden;
             border-radius: 5px;
             background-color: $silver-dark;
 
             img {
                 display: block;
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
                 object-position: center;
             }
         }
