--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -23,7 +23,7 @@
         }
 
         .thumbs-slider__nav {
-            bottom: 8px;
+            opacity: 1;
         }
 
         .thumbs-slider__zoom {
@@ -117,11 +117,12 @@
         position: absolute;
         z-index: 3;
         right: 8px;
+        bottom: auto;
         left: 8px;
+        opacity: 0;
 
         .swiper-wrapper {
             height: auto;
-            max-height: 64px;
         }
 
         .swiper-slide {
