modal sliders positions fixes

--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -119,6 +119,7 @@
         right: 8px;
         bottom: auto;
         left: 8px;
+        top: 100%;
         opacity: 0;
 
         .swiper-wrapper {
