--- a/src/blocks/modules/galleryPopup/galleryPopup.scss
+++ b/src/blocks/modules/galleryPopup/galleryPopup.scss
@@ -40,15 +40,30 @@
             }
 
             &__nav {
-                position: static;
-                background-color: #262626;
                 padding: 8px;
+                background-color: $black;
+                right: 0;
+                left: 0;
+                top: 100%;
+                margin-top: 8px;
 
                 .swiper-slide {
+                    position: relative;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        border: solid 2px transparent;
+                        opacity: 0;
+                    }
                     &-thumb-active {
                         &::before {
+                            border-color: $coral;
                             opacity: 1;
-                            display: block;
                         }
                     }
                 }
