--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -194,6 +194,7 @@
     &__description {
         width: 100%;
         padding-top: 8px;
+        box-sizing: border-box;
 
         .title {
             width: 70%;
