--- a/src/blocks/modules/practices/practices__widget.scss
+++ b/src/blocks/modules/practices/practices__widget.scss
@@ -3,6 +3,19 @@
 	border-radius: 5px;
 	background-color: #3d3d4d;
 	margin-bottom: 24px;
+	position: relative;
+
+	&:after {
+		content: '';
+		position: absolute;
+		width: 120px;
+		height: 120px;
+		top: 28px;
+		right: 28px;
+		background-image: url(../img/practices__widget-bg.svg);
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
 
 	&-header{
 		width: percentage(10/12);
