--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,4 +1,13 @@
+html{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 body {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     font: {
         size: rem(16);
         weight: 300;
@@ -136,5 +145,16 @@ body {
         &.swiper-pagination-bullet-active {
             background-color: $white;
         }
+    }
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    flex: 1 1 auto;
+
+    &__content {
+        flex: 1 1 auto;
     }
 }
