--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -1,22 +1,121 @@
 {% extends './layout.html' %}
 {% block content %}
 <div class="wrapper">
-    <div class="row">
-        {% include 'breadcrumbs/breadcrumbs.html' %}
-    </div>
-    <div class="row">
-        <div class="main-header">
-            <h1>Производственная система</h1>
+
+    <div class="row news__row">
+        <div class="col-12 news-slider js-slider-big">
+            <div class="swiper-container">
+                <div class="swiper-wrapper no-swiping">
+                    <div class="swiper-slide">
+                        <a href="/" class="card card--image">
+                            <picture class="card-img">
+                                <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                <source srcset="img/AA5J7280.webp" type="image/webp">
+                                <!--[if IE 9]></video><![endif]-->
+                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                     alt="Новые технологии на ВМЗ в 2019">
+                            </picture>
+                            <div class="card-body">
+                                <div class="card-tags"><span class="badge">ВМЗ</span></div>
+                                <h5 class="card-title">Новые технологии на ВМЗ в 2019</h5>
+                                <p class="card-text">Литейно-прокатный комплекс Выксунского металлургического завода
+                                    (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической
+                                    компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн
+                                    горячекатанного рулонного проката, став важным звеном…</p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-date">10 фев</div>
+                                <div class="card-like"><i class="icon icon--like-white"></i>0</div>
+                                <div class="card-comment"><i class="icon icon--comment-white"></i>23</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="/" class="card card--image">
+                            <picture class="card-img">
+                                <!--[if IE 9]>
+                                <video style="display: none;"><![endif]-->
+                                <source srcset="img/AA5J7280.webp" type="image/webp">
+                                <!--[if IE 9]></video><![endif]-->
+                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                     alt="Новые технологии на ВМЗ в 2019">
+                            </picture>
+                            <div class="card-body">
+                                <div class="card-tags"><span class="badge">ВМЗ</span></div>
+                                <h5 class="card-title">Новые технологии на ВМЗ в 2019</h5>
+                                <p class="card-text">Литейно-прокатный комплекс Выксунского металлургического завода
+                                    (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической
+                                    компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн
+                                    горячекатанного рулонного проката, став важным звеном…</p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-date">10 фев</div>
+                                <div class="card-like"><i class="icon icon--like-white"></i>0</div>
+                                <div class="card-comment"><i class="icon icon--comment-white"></i>23</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="/" class="card card--image">
+                            <picture class="card-img">
+                                <!--[if IE 9]>
+                                <video style="display: none;"><![endif]-->
+                                <source srcset="img/AA5J7280.webp" type="image/webp">
+                                <!--[if IE 9]></video><![endif]-->
+                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                     alt="Новые технологии на ВМЗ в 2019">
+                            </picture>
+                            <div class="card-body">
+                                <div class="card-tags"><span class="badge">ВМЗ</span></div>
+                                <h5 class="card-title">Новые технологии на ВМЗ в 2019</h5>
+                                <p class="card-text">Литейно-прокатный комплекс Выксунского металлургического завода
+                                    (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической
+                                    компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн
+                                    горячекатанного рулонного проката, став важным звеном…</p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-date">10 фев</div>
+                                <div class="card-like"><i class="icon icon--like-white"></i>0</div>
+                                <div class="card-comment"><i class="icon icon--comment-white"></i>23</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="/" class="card card--image">
+                            <picture class="card-img">
+                                <!--[if IE 9]>
+                                <video style="display: none;"><![endif]-->
+                                <source srcset="img/AA5J7280.webp" type="image/webp">
+                                <!--[if IE 9]></video><![endif]-->
+                                <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
+                                     alt="Новые технологии на ВМЗ в 2019">
+                            </picture>
+                            <div class="card-body">
+                                <div class="card-tags"><span class="badge">ВМЗ</span></div>
+                                <h5 class="card-title">Новые технологии на ВМЗ в 2019</h5>
+                                <p class="card-text">Литейно-прокатный комплекс Выксунского металлургического завода
+                                    (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической
+                                    компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн
+                                    горячекатанного рулонного проката, став важным звеном…</p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-date">10 фев</div>
+                                <div class="card-like"><i class="icon icon--like-white"></i>0</div>
+                                <div class="card-comment"><i class="icon icon--comment-white"></i>23</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button swiper-button-prev"></div>
+            <div class="swiper-button swiper-button-next"></div>
         </div>
     </div>
 
 </div>
-
-
-<h1>Главная</h1>
 {% endblock %}
 
 {% block scripts %}
-<script src="js/main.js"></script>
 
 {% endblock %}
