--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -173,57 +173,35 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="practices__item">
-                                <div class="practices__video-body">
-                                    <picture class="practices__preview">
-                                        <!--[if IE 9]>
-                                        <video style="display: none;"><![endif]-->
+                            <div class="video">
+                                <div class="video__body">
+                                    <picture class="video__preview">
+                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
                                     </picture>
-                                    <video class="practices__player" controls="" preload="auto">
+                                    <video class="video__player" controls preload="auto">
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
                                         <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
                                         <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
                                         Your browser does not support the video tag.
                                     </video>
-                                    <div class="practices__time">0:06</div>
+                                    <div class="video__time"></div>
                                 </div>
-                                <div class="practices__footer">
-                                    <h5 class="practices__title">Выксунский металлургический завод</h5>
-                                    <div class="practices__autor">
-                                        <div class="avatar"><img src="" alt="" title></div>
+                                <div class="video__footer">
+                                    <h5 class="video__title">Выксунский металлургический завод</h5>
+                                    <a href="" class="video__author">
+                                        <div class="avatar">
+                                            <img src="img/avatar.jpg" alt="">
+                                        </div>
                                         <div class="name">Лариса Сковородникова</div>
+                                    </a>
+                                    <div class="video__footer-info">
+                                        <div class="card-date">10 фев</div>
+                                        <div class="card-view"><i class="icon icon--view-gray"></i> 10</div>
                                     </div>
-                                    <div class="card-date">10 фев</div>
-                                    <div class="card-view"><i class="icon icon--view-gray"></i>104</div>
-                                    <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
-                                    <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="practices__item">
-                                <div class="practices__photo-body">
-                                    <picture class="practices__preview">
-                                        <!--[if IE 9]>
-                                        <video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J7433.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="practices__footer">
-                                    <h5 class="practices__title">Выксунский металлургический завод</h5>
-                                    <div class="practices__autor">
-                                        <div class="avatar"><img src="" alt="" title></div>
-                                        <div class="name">Лариса Сковородникова</div>
-                                    </div>
-                                    <div class="card-date">10 фев</div>
-                                    <div class="card-view"><i class="icon icon--view-gray"></i>104</div>
-                                    <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
-                                    <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
+
                                 </div>
                             </div>
                         </div>
