--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@
 @import 'base/icons';
 @import '../blocks/modules';
 
+
+@import 'pages/main-page';
 @import 'pages/news';
 @import 'pages/text-page';
 @import 'pages/ps-main';
