--- a/src/blocks/modules/galleryPopup/galleryPopup.scss
+++ b/src/blocks/modules/galleryPopup/galleryPopup.scss
@@ -56,21 +56,21 @@
             }
 
             &__nav {
-                padding: 8px;
-                background-color: $black;
+                top: 100%;
                 right: 0;
                 left: 0;
-                top: 100%;
+                padding: 8px;
+                background-color: $black;
                 margin-top: 8px;
 
                 .swiper-slide {
                     position: relative;
                     &::before {
-                        content: "";
+                        content: '';
+                        display: block;
                         position: absolute;
                         top: 0;
                         left: 0;
-                        display: block;
                         width: 100%;
                         height: 100%;
                         border: solid 2px transparent;
@@ -91,7 +91,7 @@
             max-width: 776px;
             margin: auto;
             background-color: $white;
-            border-radius: 8px
+            border-radius: 8px;
         }
     }
 
@@ -103,17 +103,17 @@
 
         .btn {
             @include transition();
-            margin-right: 16px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center center;
             display: inline-block;
             width: 32px;
             min-width: 32px;
             height: 32px;
-            padding: 0;
-            background-color: transparent;
             border: none;
+            padding: 0;
+            margin-right: 16px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-color: transparent;
 
             &:hover {
                 transform: scale(1.1);
