--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends './layout.html' %}
 {% block content %}
-<div class="wrapper">
+<div class="wrapper main-page">
 
     <div class="row news__row">
         <div class="col-12 news-slider js-slider-big">
@@ -9,7 +9,8 @@
                     <div class="swiper-slide">
                         <a href="/" class="card card--image">
                             <picture class="card-img">
-                                <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                <!--[if IE 9]>
+                                <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
                                 <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
@@ -112,6 +113,49 @@
             <div class="swiper-button swiper-button-next"></div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-10 offset-md-1">
+            <div class="main-page__links">
+                <a href="" class="main-page__link">
+            <span class="main-page__link-img">
+                <img src="img/main-page_1.png" alt="" class="normal">
+                <img src="img/main-page_12.png" alt="" class="hover">
+            </span>
+                    <span class="main-page__link-text">Вопросы руководству</span>
+                </a>
+                <a href="" class="main-page__link">
+            <span class="main-page__link-img">
+                <img src="img/main-page_2.png" alt="" class="normal">
+                <img src="img/main-page_22.png" alt="" class="hover">
+            </span>
+                    <span class="main-page__link-text">Горячая линия</span>
+                </a>
+                <a href="" class="main-page__link">
+            <span class="main-page__link-img">
+                <img src="img/main-page_3.png" alt="" class="normal">
+                <img src="img/main-page_32.png" alt="" class="hover">
+            </span>
+                    <span class="main-page__link-text">Служба безопасности</span>
+                </a>
+                <a href="" class="main-page__link">
+            <span class="main-page__link-img">
+                <img src="img/main-page_4.png" alt="" class="normal">
+                <img src="img/main-page_42.png" alt="" class="hover">
+            </span>
+                    <span class="main-page__link-text">Предложить идею</span>
+                </a>
+                <a href="" class="main-page__link">
+            <span class="main-page__link-img">
+                <img src="img/main-page_5.png" alt="" class="normal">
+                <img src="img/main-page_52.png" alt="" class="hover">
+            </span>
+                    <span class="main-page__link-text">Поддержка</span>
+                </a>
+            </div>
+        </div>
+    </div>
+
 
 </div>
 {% endblock %}
