--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -396,6 +396,18 @@
             margin-right: 4px;
         }
     }
+
+    &-view {
+        font-size: rem(14);
+        line-height: 1.43;
+        color: $text-silver;
+
+        .icon {
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 4px;
+        }
+    }
 }
 
 .detours-card {
