--- a/src/styles/base/_icons.scss
+++ b/src/styles/base/_icons.scss
@@ -52,7 +52,6 @@
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0H16V16H0z'/%3E%3Cpath stroke='%23ffffff' d='M8 1C4.686 1 2 3.686 2 7c0 1.167.333 2.256.91 3.178L1 14l3.822-1.91c.922.577 2.01.91 3.178.91 3.314 0 6-2.686 6-6s-2.686-6-6-6z'/%3E%3C/g%3E%3C/svg%3E");
     }
 
-
     &--star-check {
         display: block;
         width: 16px;
@@ -69,6 +68,9 @@
 
     &--view-gray {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='none' fill-rule='evenodd' transform='rotate(180 12 12)'%3E%3Cpath d='M0 0H24V24H0z'/%3E%3Cpath stroke='%23909099' stroke-width='1.6' d='M3.357 12c1.372 3.398 4.778 5.7 8.643 5.7 3.865 0 7.272-2.303 8.643-5.7C19.271 8.602 15.865 6.3 12 6.3c-3.865 0-7.272 2.303-8.643 5.7z'/%3E%3Ccircle cx='12' cy='12' r='2.2' stroke='%23909099' stroke-width='1.6'/%3E%3C/g%3E%3C/svg%3E");
+        display: block;
+        width: 16px;
+        height: 16px;
     }
 
     &--share-gray {
