--- a/src/styles/pages/ps-main.scss
+++ b/src/styles/pages/ps-main.scss
@@ -1,7 +1,7 @@
 .practices {
-    margin-bottom: 40px;
+    margin-bottom: 64px;
 
-    &__slider {
-        margin-bottom: 32px;
+    .video-gallery__slider {
+        margin-bottom: 40px;
     }
 }
