--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -168,15 +168,44 @@
             </div>
         </div>
 
-        <div class="row row__news">
-            <div class="practices__slider">
+        <div class="row video-gallery__row">
+            <div class="col-12 video-gallery__slider js-video-gallery">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide video-gallery__item">
+                            <div class="video no-video">
+                                <div class="video__body">
+                                    <a href="#0">
+                                        <picture class="video__preview">
+                                            <!--[if IE 9]>
+                                            <video style="display: none;"><![endif]-->
+                                            <source srcset="img/AA5J7433.webp" type="image/webp">
+                                            <!--[if IE 9]></video><![endif]-->
+                                            <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                        </picture>
+                                    </a>
+                                </div>
+                                <div class="video__footer">
+                                    <a href="#0" class="video__title">Выксунский металлургический завод</a>
+                                    <div class="video__author">
+                                        <div class="avatar"><img class="avatar__img" src="img/avatar.jpg" alt="Лариса Сковородникова" title="Лариса Сковородникова"></div>
+                                        <h6 class="name">Лариса Сковородникова</h6>
+                                    </div>
+                                    <div class="video__footer-inner">
+                                        <div class="card-date">10 фев</div>
+                                        <div class="card-view"><i class="icon icon--view-gray"></i>100</div>
+                                        <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
+                                        <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide video-gallery__item">
                             <div class="video">
                                 <div class="video__body">
                                     <picture class="video__preview">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
                                         <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
@@ -190,23 +219,90 @@
                                     <div class="video__time"></div>
                                 </div>
                                 <div class="video__footer">
-                                    <h5 class="video__title">Выксунский металлургический завод</h5>
-                                    <a href="" class="video__author">
-                                        <div class="avatar">
-                                            <img src="img/avatar.jpg" alt="">
-                                        </div>
-                                        <div class="name">Лариса Сковородникова</div>
-                                    </a>
-                                    <div class="video__footer-info">
-                                        <div class="card-date">10 фев</div>
-                                        <div class="card-view"><i class="icon icon--view-gray"></i> 10</div>
+                                    <a href="#0" class="video__title">Выксунский металлургический завод</a>
+                                    <div class="video__author">
+                                        <div class="avatar"><img class="avatar__img" src="img/avatar.jpg" alt="Лариса Сковородникова" title="Лариса Сковородникова"></div>
+                                        <h6 class="name">Лариса Сковородникова</h6>
                                     </div>
-
+                                    <div class="video__footer-inner">
+                                        <div class="card-date">10 фев</div>
+                                        <div class="card-view"><i class="icon icon--view-gray"></i>100</div>
+                                        <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
+                                        <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide video-gallery__item">
+                            <div class="video">
+                                <div class="video__body">
+                                    <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
+                                        <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
+                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                    </picture>
+                                    <video class="video__player" controls preload="auto">
+                                        <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
+                                        <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
+                                        <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                    <div class="video__time"></div>
+                                </div>
+                                <div class="video__footer">
+                                    <a href="#0" class="video__title">Выксунский металлургический завод</a>
+                                    <div class="video__author">
+                                        <div class="avatar"><img class="avatar__img" src="img/avatar.jpg" alt="Лариса Сковородникова" title="Лариса Сковородникова"></div>
+                                        <h6 class="name">Лариса Сковородникова</h6>
+                                    </div>
+                                    <div class="video__footer-inner">
+                                        <div class="card-date">10 фев</div>
+                                        <div class="card-view"><i class="icon icon--view-gray"></i>100</div>
+                                        <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
+                                        <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide video-gallery__item">
+                            <div class="video">
+                                <div class="video__body">
+                                    <picture class="video__preview">
+                                        <!--[if IE 9]>
+                                        <video style="display: none;"><![endif]-->
+                                        <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
+                                        <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
+                                    </picture>
+                                    <video class="video__player" controls preload="auto">
+                                        <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
+                                        <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
+                                        <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                    <div class="video__time"></div>
+                                </div>
+                                <div class="video__footer">
+                                    <a href="#0" class="video__title">Выксунский металлургический завод</a>
+                                    <div class="video__author">
+                                        <div class="avatar"><img class="avatar__img" src="img/avatar.jpg" alt="Лариса Сковородникова" title="Лариса Сковородникова"></div>
+                                        <h6 class="name">Лариса Сковородникова</h6>
+                                    </div>
+                                    <div class="video__footer-inner">
+                                        <div class="card-date">10 фев</div>
+                                        <div class="card-view"><i class="icon icon--view-gray"></i>100</div>
+                                        <div class="card-like"><i class="icon icon--like-gray"></i>0</div>
+                                        <div class="card-comment"><i class="icon icon--comment-gray"></i>23</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="swiper-button swiper-button-prev"></div>
+                <div class="swiper-button swiper-button-next"></div>
             </div>
         </div>
 
