add pagination add best-practics.html add security.html

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -9,3 +9,4 @@
 @import 'modules/comments/comments';
 @import 'modules/likeItem/likeItem';
 @import 'modules/practices/practices__widget';
+@import 'modules/pagination/pagination';
